# 20260319_connector_spdlog

./: .gitignore  CMakeLists.txt  configure_makefile.sh  mariaDBinsert.cpp  run_exec.sh
src/: classes.hpp  database_manager_class.hpp  functions.hpp  main.cpp  mariadb_header.hpp  mqtt_header.hpp  variables.hpp
tests/: test.cpp
